# tonestack

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.json
.claude/rules/: code-style.md  communication.md  review.md  security.md
.github/workflows/: ci.yml
cmake/: Codegen.cmake  CompilerWarnings.cmake  EngineGuard.cmake  EngineGuardScan.cmake
compiler/: pyproject.toml
compiler/circuits/: REFERENCE.md  rangemaster-reference.md  rangemaster.net  ts9.net
compiler/src/circuitc/: __init__.py  bias.py  cli.py  discretize.py  emit_cpp.py  ir.py  netlist.py  sample.py
compiler/tests/: test_ir_roundtrip.py  test_rangemaster.py  test_ts9_golden.py
contract/: README.md
contract/golden/: rangemaster.ir.json  rangemaster_input.coeffs.json  rangemaster_output.coeffs.json  ts9.ir.json  ts9_drive.coeffs.json  ts9_tone.coeffs.json
engine/: CMakeLists.txt
engine/include/tonestack/: AudioBlock.h  Chain.h  Node.h  NodeInfo.h  Parameter.h  ParameterSet.h  ProcessSpec.h  RtAssert.h
engine/src/: Chain.cpp  Parameter.cpp  ParameterSet.cpp
harness/: CMakeLists.txt
harness/src/: main.cpp
nodes/: CMakeLists.txt
nodes/include/tonestack/nodes/: BiquadCoeffs.h  BiquadNode.h  GainNode.h  IirCoeffs.h  IirNode.h  OversampledNode.h  RangemasterModule.h  TableInterp.h  WaveshaperNode.h  WaveshaperShapes.h
tests/: CMakeLists.txt  biquad_tests.cpp  chain_tests.cpp  golden_coeffs.cpp  iir_tests.cpp  oversample_waveshaper_tests.cpp  parameter_tests.cpp  rangemaster_golden.cpp  rt_safety_tests.cpp  test_framework.h  test_main.cpp
