[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitc"
version = "0.1.0"
description = "ToneStack offline circuit compiler: netlist -> discretized coefficient-table IR -> generated C++"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "pyright>=1.1", "scipy-stubs>=1.10"]

[project.scripts]
circuitc = "circuitc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The discretizer's bilinear coefficient formulas are single long expressions; keep each on
# one line for readability rather than wrapping mid-formula.
"src/circuitc/discretize.py" = ["E501"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
